# gitlab-bot-manager

./: .gitignore  README.md  config_example.yml  main.py  pyproject.toml
doc/: database.drawio
src/database/: models.py  scheme.sql
src/telegram_core/: bot.py  constants.py  test_db.py
src/telegram_core/handlers/: start.py
src/utils/: config.py  logger.py
